# shikilib

./: .gitignore  CMakeLists.txt  readme.md
files/: anilib.json  shiki.json  shikilib.json
misc/: animelib.json  shikimori.json
src/: main.cpp
src/data/: structs.h
src/db/: db.h
src/networker/: networker.cpp  networker.h
src/parser/: parser.cpp  parser.h
src/utils/: utils.cpp  utils.h
